# federated-light-skin-cancer-classification

./: .gitignore  README.md  main_client.py  main_server.py  pyproject.toml  requirements.txt  run_download.py  run_experiment.py  run_fl.py  run_tests.py  setup_project.py
client/: Dockerfile  __init__.py  client.py  entrypoint_client.sh  main_client.py
config/: __init__.py  config.py
configs/: default.yaml  dscatnet_centralized_original.yaml  dscatnet_federated_ham10000.yaml  dscatnet_federated_padufes20.yaml  experiment_config.yaml  fl_config.yaml  model_config.yaml
configs/experiments/: centralized_ham10000.yaml  federated_ham10000.yaml  federated_ham10000_flower.yaml  federated_ham10000_iid.yaml  federated_ham10000_noniid.yaml
data/: README.md  __init__.py  data_loader.py  preprocessing.py
docker/: Dockerfile.client  Dockerfile.server  docker-compose.yaml
k8s/: README.md  client-deployment.yaml  configmap.yaml  namespace.yaml  secret-template.yaml  server-deployment.yaml  server-service.yaml  storage.yaml
k8s/deployments/: client.yaml  server.yaml
models/: __init__.py  cnn_model.py
notebooks/: 01_data_exploration.ipynb  01_dataset_exploration.ipynb  02_model_evaluation.ipynb  02_model_experiments.ipynb  03_federated_analysis.ipynb  03_fl_vs_centralized_comparison.ipynb
scripts/: evaluate.py  provision_azure.sh  train_centralized.py  train_federated.py  train_federated_flower.py
server/: Dockerfile  __init__.py  main_server.py  server.py
src/: __init__.py
src/centralized/: __init__.py  centralized.py
src/data/: __init__.py  datasets.py  download.py  federated.py  ham10000.py  isic2018.py  isic2019.py  isic2020.py  preprocessing.py  splits.py  transforms.py  verify.py
src/evaluation/: __init__.py  metrics.py  visualization.py
src/federated/: __init__.py  aggregation.py  client.py  flower_client.py  flower_server.py  server.py  simulation.py  strategies.py  strategy.py
src/models/: __init__.py  components.py  cross_attention.py  dscatnet.py  lms_vit.py  patch_embedding.py
src/training/: __init__.py  callbacks.py  centralized.py  trainer.py
src/utils/: __init__.py  (+7 more)
tests/: __init__.py  test_centralized.py  test_data.py  test_evaluation.py  test_federated.py  test_models.py  test_preprocessing.py  test_simulation.py  test_splits.py  test_utils.py
utils/: __init__.py  gradcam.py  logging_utils.py  metrics.py  security.py
